Changing width display for overflow bugging

--- a/src/pages/generator/index.module.scss
+++ b/src/pages/generator/index.module.scss
@@ -6,7 +6,7 @@
 
 .hmwPreset {
   display: block;
-  width: fit-content;
+  width: 100%;
   font-weight: 500;
   font-size: 2rem;
   margin-left: 4rem;
